5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4072/executions/1621_2934.log
== TEST (2019-04-01 18:25:10) 
-- CODE:
#imprimir numero total de anos triplicados 
valor inicial = (int(input("qual o valor investido inicialmente?")))
taxa de rendimento = (float(input("qual a taxa de rendimento?")))
from math import *

-- ERROR:
File "XXXX", line 2
    valor inicial = (int(input()))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:31:32) 
-- CODE:
#imprimir numero total de anos triplicados 
#Q0 aplicação financeira
#
x = (int(input("qual o valor investido inicialmente?")))
y = (float(input("qual a taxa de rendimento?")))

from math import *
y = (ln(qf) - log(q0))/r
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = (int(input()))
ValueError: invalid literal for int() with base 10: '155.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:37:05) 
-- CODE:
#imprimir numero total de anos triplicados 
#Q0 aplicação financeira
#
valor inicial = (int(input("qual o valor investido inicialmente? ")))
taxa de rendimento = (float(input("qual a taxa de rendimento?")))

from math import *

-- ERROR:
File "XXXX", line 4
    valor inicial = (int(input()))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
